--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <li><a href="#about">About</a></li>
             <li><a href="#features">Features</a></li>
             <li><a href="#contact">Contact</a></li>
-            <li><a href="Recycle_Coin_White_Paper_Final_v7.pdf" target="_blank">White Paper</a></li>
+            <li><a href="Recycle_Coin_White_Paper_Final_v7.pdf" target="_blank">White Paper</a></li> <!-- Ensure this link matches the file name -->
         </ul>
     </nav>
     <section id="home">
