--- a/index.html
+++ b/index.html
@@ -3,44 +3,67 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recycle Coin (RCYL)</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Recycle Coin (RCYL) - Home</title>
+    <style>
+        body { font-family: Arial, sans-serif; line-height: 1.6; margin: 0; padding: 0; background: #f4f4f4; color: #333; }
+        .container { width: 80%; margin: auto; overflow: hidden; }
+        header { background: #333; color: #fff; padding-top: 30px; min-height: 70px; border-bottom: #77d4d3 3px solid; }
+        header a { color: #fff; text-decoration: none; text-transform: uppercase; font-size: 16px; }
+        header ul { padding: 0; list-style: none; }
+        header li { float: left; display: inline; padding: 0 20px 0 20px; }
+        header #branding { float: left; }
+        header #branding h1 { margin: 0; }
+        header nav { float: right; margin-top: 10px; }
+        .showcase { background: #35424a; color: #fff; min-height: 400px; text-align: center; padding: 100px 20px; }
+        .showcase h1 { font-size: 55px; margin-top: 0; }
+        .showcase p { font-size: 20px; }
+        .content { padding: 20px; }
+        .content h2 { color: #35424a; }
+        footer { background: #333; color: #fff; text-align: center; padding: 30px 0; }
+        footer p { margin: 0; }
+    </style>
 </head>
 <body>
     <header>
-        <h1>Welcome to Recycle Coin (RCYL)</h1>
+        <div class="container">
+            <div id="branding">
+                <h1>Recycle Coin (RCYL)</h1>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#roadmap">Roadmap</a></li>
+                    <li><a href="#team">Team</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
-    <nav>
-        <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#features">Features</a></li>
-            <li><a href="#contact">Contact</a></li>
-            <li><a href="Recycle_Coin_White_Paper_Final_v7.pdf" target="_blank">White Paper</a></li> <!-- Ensure this link matches the file name -->
-        </ul>
-    </nav>
-    <section id="home">
-        <h2>About Recycle Coin</h2>
-        <p>Recycle Coin (RCYL) is a blockchain-based solution designed to incentivize recycling efforts and promote environmental sustainability. Earn RCYL tokens for verified recycling activities and join us in making a positive impact on the environment.</p>
+    <section class="showcase">
+        <div class="container">
+            <h1>Join the Green Revolution</h1>
+            <p>Recycle Coin (RCYL) - A unique cryptocurrency designed to incentivize and reward recycling activities.</p>
+        </div>
     </section>
-    <section id="about">
-        <h2>Our Mission</h2>
-        <p>Our mission is to revolutionize recycling by leveraging blockchain technology. By rewarding users for their recycling efforts, we aim to increase participation and transparency in recycling programs worldwide.</p>
-    </section>
-    <section id="features">
-        <h2>Key Features</h2>
-        <ul>
-            <li>Earn rewards for recycling</li>
-            <li>Transparent and secure tracking</li>
-            <li>Support for eco-friendly initiatives</li>
-        </ul>
-    </section>
-    <section id="contact">
-        <h2>Contact Us</h2>
-        <p>Email: info@recyclecoin.com</p>
+    <section class="content">
+        <div class="container">
+            <h2 id="about">About</h2>
+            <p>Recycle Coin (RCYL) is a groundbreaking innovation designed to transform the recycling industry by leveraging blockchain technology. RCYL aims to promote environmental sustainability and responsible waste management through a gamified, community-driven platform that rewards users for their recycling efforts with a limited supply of 10 million coins.</p>
+            <h2 id="roadmap">Roadmap</h2>
+            <ul>
+                <li><strong>Phase 1:</strong> Development and Launch</li>
+                <li><strong>Phase 2:</strong> Community Building and Marketing</li>
+                <li><strong>Phase 3:</strong> Platform Expansion</li>
+                <li><strong>Phase 4:</strong> Global Adoption</li>
+            </ul>
+            <h2 id="team">Team</h2>
+            <p>Yousef Fakhouri - Founder and CEO. Experienced entrepreneur with a background in environmental sustainability and blockchain technology.</p>
+            <h2 id="contact">Contact</h2>
+            <p>Join our community on <a href="https://discord.gg/recyclecoin">Discord</a> and follow us on <a href="https://twitter.com/recyclecoin">Twitter</a>.</p>
+        </div>
     </section>
     <footer>
-        <p>&copy; 2024 Recycle Coin</p>
+        <p>Recycle Coin &copy; 2024</p>
     </footer>
 </body>
 </html>
