--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         .content h2 { color: #35424a; }
         footer { background: #333; color: #fff; text-align: center; padding: 30px 0; }
         footer p { margin: 0; }
+        .btn { background: #35424a; color: #fff; padding: 10px 20px; text-decoration: none; }
     </style>
 </head>
 <body>
@@ -35,6 +36,7 @@
                     <li><a href="#roadmap">Roadmap</a></li>
                     <li><a href="#team">Team</a></li>
                     <li><a href="#contact">Contact</a></li>
+                    <li><a href="/mnt/data/Recycle_Coin_White_Paper.pdf" target="_blank">White Paper</a></li>
                 </ul>
             </nav>
         </div>
@@ -60,6 +62,7 @@
             <p>Yousef Fakhouri - Founder and CEO. Experienced entrepreneur with a background in environmental sustainability and blockchain technology.</p>
             <h2 id="contact">Contact</h2>
             <p>Join our community on <a href="https://discord.gg/recyclecoin">Discord</a> and follow us on <a href="https://twitter.com/recyclecoin">Twitter</a>.</p>
+            <a href="/mnt/data/Recycle_Coin_White_Paper.pdf" class="btn" target="_blank">Read Our White Paper</a>
         </div>
     </section>
     <footer>
