--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             line-height: 1.6;
             margin: 0;
             padding: 0;
-            background: #f4f4f4;
+            background: #f0f0f0;
             color: #333;
         }
         .container {
@@ -21,11 +21,11 @@
             overflow: hidden;
         }
         header {
-            background: #2b2b2b;
+            background: #4CAF50;
             color: #fff;
-            padding-top: 30px;
+            padding-top: 20px;
             min-height: 70px;
-            border-bottom: #77d4d3 3px solid;
+            border-bottom: #3e8e41 3px solid;
         }
         header a {
             color: #fff;
@@ -68,13 +68,17 @@
         }
         .content {
             padding: 20px;
+            background: #fff;
+            margin-top: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
         }
         .content h2 {
-            color: #35424a;
+            color: #4CAF50;
         }
         .btn {
             display: inline-block;
-            background: #35424a;
+            background: #4CAF50;
             color: #fff;
             padding: 10px 20px;
             text-decoration: none;
@@ -90,6 +94,7 @@
         }
         .card h3 {
             margin-top: 0;
+            color: #4CAF50;
         }
         .flex-container {
             display: flex;
@@ -102,10 +107,11 @@
             min-width: 250px;
         }
         footer {
-            background: #2b2b2b;
+            background: #4CAF50;
             color: #fff;
             text-align: center;
             padding: 30px 0;
+            margin-top: 20px;
         }
         footer p {
             margin: 0;
@@ -142,14 +148,17 @@
         }
         .nav-links a {
             padding: 10px 20px;
-            background: #77d4d3;
-            color: #333;
+            background: #3e8e41;
+            color: #fff;
             border-radius: 5px;
             text-decoration: none;
         }
         .nav-links a:hover {
-            background: #35424a;
+            background: #2e7031;
             color: #fff;
+        }
+        h3, p {
+            line-height: 1.8;
         }
     </style>
 </head>
@@ -157,7 +166,7 @@
     <header>
         <div class="container">
             <div id="branding">
-                <img src="logo.png" alt="Recycle Coin Logo" class="logo">
+                <img src="Bold_3D_Recycle_Coin_Logo.png" alt="Recycle Coin Logo" class="logo">
                 <h1>Recycle Coin (RCYL)</h1>
             </div>
             <nav>
@@ -216,10 +225,3 @@
                     - Q3 2024: Launch of Recycle Coin white paper and initial token distribution<br>
                     - Q4 2024: Pilot program launch<br>
                     - Q1 2025: Expansion of partnerships with local governments and businesses<br>
-                    - Q2 2025: Launch of NFT-based recycling certificates and marketplace<br>
-                    - Q3 2025: Full-scale implementation and global expansion
-                </p>
-                <h3>Team</h3>
-                <p>Yousef Fakhouri: Founder and CEO, with a background in environmental science and blockchain technology.</p>
-                <h3>Conclusion</h3>
-                <p
