--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 
         body {
             font-family: 'Roboto', sans-serif;
-            line-height: 1.8;
+            line-height: 1.6;
             margin: 0;
             padding: 0;
-            background: #000;
-            color: #fff;
+            background: #f0f0f0;
+            color: #333;
         }
         .container {
             width: 80%;
@@ -31,7 +31,7 @@
             color: #fff;
             text-decoration: none;
             text-transform: uppercase;
-            font-size: 18px;
+            font-size: 16px;
         }
         header ul {
             padding: 0;
@@ -53,7 +53,7 @@
             margin-top: 10px;
         }
         .showcase {
-            background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('Bold_3D_Recycle_Coin_Logo.png') no-repeat center center/cover;
+            background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('recycle-bg.jpg') no-repeat center center/cover;
             color: #fff;
             height: 400px;
             text-align: center;
@@ -64,31 +64,30 @@
             margin-top: 0;
         }
         .showcase p {
-            font-size: 22px;
+            font-size: 20px;
         }
         .content {
             padding: 20px;
+            background: #fff;
             margin-top: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
         }
         .content h2 {
             color: #4CAF50;
-            font-size: 32px;
-        }
-        .content p, .content h3 {
-            font-size: 22px;
         }
         .btn {
             display: inline-block;
             background: #4CAF50;
             color: #fff;
-            padding: 12px 24px;
+            padding: 10px 20px;
             text-decoration: none;
             border-radius: 5px;
-            font-size: 18px;
         }
         .card {
-            background: rgba(0, 0, 0, 0.8);
-            border: 1px solid #4CAF50;
+            background: #fff;
+            border: 1px solid #ddd;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             margin: 20px 0;
             padding: 20px;
             border-radius: 5px;
@@ -226,4 +225,3 @@
                     - Q3 2024: Launch of Recycle Coin white paper and initial token distribution<br>
                     - Q4 2024: Pilot program launch<br>
                     - Q1 2025: Expansion of partnerships with local governments and businesses<br>
-                    - Q2 2025: Launch of NFT-based recycling
