--- a/index.html
+++ b/index.html
@@ -75,11 +75,12 @@
         <div class="card">
             <h2>Solution Overview</h2>
             <p>Recycle Coin leverages blockchain technology to create a transparent and efficient system for rewarding recycling activities. By using smart contracts, Recycle Coin ensures that recycling efforts are accurately tracked and verified, providing users with immediate rewards in the form of RCYL tokens.</p>
+            <p>To further incentivize recycling, RCYL integrates NFTs (Non-Fungible Tokens) into its platform. Users can document their recycling efforts by uploading photos or videos, which are then verified and minted as unique NFTs on the Solana blockchain. Each NFT represents a verified recycling activity and can be traded, sold, or collected by users. This adds an additional layer of value and engagement, as users are not only rewarded with RCYL tokens but also own a digital asset that proves their commitment to environmental sustainability.</p>
         </div>
 
         <div class="card">
             <h2>Technology and Implementation</h2>
-            <p>Recycle Coin is built on the Solana blockchain, chosen for its high throughput and low transaction costs. Smart contracts handle the distribution of RCYL tokens based on verified recycling activities.</p>
+            <p>Recycle Coin is built on the Solana blockchain, chosen for its high throughput and low transaction costs. Smart contracts handle the distribution of RCYL tokens based on verified recycling activities. The NFT minting process is integrated seamlessly within the platform, allowing users to easily convert their recycling documentation into NFTs. The platform uses a decentralized verification system to ensure the authenticity of recycling efforts before minting them as NFTs and issuing rewards.</p>
         </div>
 
         <div class="card">
@@ -99,11 +100,17 @@
         </div>
 
         <div class="card">
+            <h2>Recycling Rewards and NFTs</h2>
+            <p>The platform encourages users to engage in sustainable activities by offering rewards for verified recycling. Users earn RCYL tokens based on the type and amount of recycling they document. For example, recycling materials such as plastics, metals, and paper can result in different levels of token rewards. Additionally, users have the opportunity to mint NFTs from their recycling documentation. These NFTs are unique digital assets that not only reflect the user's contribution to environmental sustainability but also serve as collectibles that can increase in value over time.</p>
+            <p>To maximize rewards, users are encouraged to participate in community challenges and events that offer bonus RCYL tokens and exclusive NFTs. The combination of financial incentives and digital collectibles creates a comprehensive reward system that fosters long-term engagement and drives the platform's adoption.</p>
+        </div>
+
+        <div class="card">
             <h2>Use Cases</h2>
             <p>
-                - Individual Recycling: Users earn RCYL tokens for recycling household waste.<br>
-                - Business Partnerships: Businesses can participate by offering RCYL tokens as rewards for customers who recycle packaging materials.<br>
-                - Community Programs: Municipalities can integrate Recycle Coin into their recycling programs to boost participation and transparency.
+                - **Individual Recycling:** Users earn RCYL tokens and mint NFTs for recycling household waste.<br>
+                - **Business Partnerships:** Businesses can participate by offering RCYL tokens as rewards for customers who recycle packaging materials. Additionally, businesses can sponsor NFTs that promote their brand and support sustainability efforts.<br>
+                - **Community Programs:** Municipalities can integrate Recycle Coin into their recycling programs to boost participation and transparency. Community-based NFTs can be created to recognize neighborhoods or cities with exceptional recycling rates.
             </p>
         </div>
 
