--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
         body {
             font-family: 'Roboto', sans-serif;
-            line-height: 1.8;
+            line-height: 1.6;
             margin: 0;
             padding: 0;
             background: #000;
@@ -21,11 +21,20 @@
             padding-top: 20px;
             overflow: hidden;
         }
-        h1, h2, h3 {
+        h1 {
+            font-size: 28px;
+            color: #4CAF50;
+        }
+        h2 {
+            font-size: 24px;
+            color: #4CAF50;
+        }
+        h3 {
+            font-size: 20px;
             color: #4CAF50;
         }
         p {
-            font-size: 20px;
+            font-size: 16px;
             margin-bottom: 20px;
         }
         .card {
